# MetaTasks-Prod

./: .env.example  .gitignore  .importlinter  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mypy.ini  package.json  pyproject.toml  ruff.toml  tailwind.config.js
apps/accounts/: apps.py  models.py  urls.py
apps/accounts/migrations/: 0001_initial.py
apps/analytics/: apps.py  urls.py
apps/api/: apps.py  urls.py
apps/audit/: apps.py  urls.py
apps/billing/: apps.py  urls.py
apps/common/: apps.py  exceptions.py  middleware.py  tenancy.py
apps/integrations/: apps.py  urls.py
apps/licensing/: __init__.py  apps.py  decorators.py  models.py  selectors.py  services.py
apps/licensing/migrations/: 0001_initial.py
apps/notifications/: apps.py  urls.py
apps/organizations/: apps.py  models.py  selectors.py  services.py  urls.py
apps/organizations/migrations/: 0001_initial.py
apps/realtime/: apps.py
apps/scheduling/: apps.py  urls.py
apps/ui/: apps.py  urls.py  views.py
apps/ui/components/: button.html  empty_state.html  modal.html  skeleton.html
apps/ui/partials/workflows/: workitem_row.html
apps/ui/templatetags/: ui_components.py
apps/workflows/: apps.py  urls.py
config/: __init__.py  asgi.py  logging.py  middleware.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  dev.py  migrations.py  prod.py  test.py
docs/: BUILD_SUMMARY.md  DEVELOPMENT.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  architecture.md
docs/adr/: 0001-architecture-overview.md  0002-django-structure-and-service-layer.md
docs/ui/: UI_COMPONENTS.md  component-catalog.md  design-tokens.md  interaction-patterns.md
scripts/: build_frontend.sh  create_sample_data.sh  dev.sh  format.sh  lint.sh  test.sh  wait_for_db.py
tests/: conftest.py
tests/unit/: test_accounts.py  test_basic.py  test_common.py  test_licensing.py  test_organizations.py  test_phase2_integration.py  test_phase3_integration.py
(+52 files in other folders)
